Implement remaining api methods for manipulating levels
