# backend/routers/levels.js
@@ -1,4 +1,5 @@
 const express = require('express')
+const { ObjectId } = require('mongodb')
 const router = express.Router()
 
 const artists = {
@@ -9,51 +10,117 @@ const artists = {
   }
 }
 
-router.post('/', async (req, res, next) => {
-  if (!req.app.locals.authorized) {
-    let notAuthorized = new Error()
-    notAuthorized.status = 401
-    notAuthorized.errors = 'Levels can only be created by authorized users'
-    notAuthorized.message = 'The header \'authorization\' must contain a valid token'
-    return next(notAuthorized)
-  }
+// Helpers used by multiple methods
 
-  // add check for audiolinks to domains on blocklist
-
-  let level = req.body
-  level.author = {
-    id: req.app.locals.userId,
-    username: req.app.locals.username
-  }
-
-  level.artists = []
-  for (artistId of level.artistIds) {
-    if (artists.hasOwnProperty(artistId)) {
-      level.artists.push(artists[artistId])
-    } else {
-      let artistNotFound = new Error()
-      artistNotFound.status = 404
-      artistNotFound.errors = 'At least one unknown artistId given'
-      artistNotFound.message = 'No artist with artistId ' + artistId + ' found'
-      return next(artistNotFound)
+const checkAuthenticated = function (error) {
+  return async (req, res, next) => {
+    if (!req.app.locals.authenticated) {
+      let notAuthenticated = new Error()
+      notAuthenticated.status = 401
+      notAuthenticated.errors = error
+      notAuthenticated.message = 'The header \'authorization\' must contain a valid token'
+      return next(notAuthenticated)
     }
+    next()
   }
-  delete level.artistIds
+}
 
-  const result = await req.app.locals.db.collection('levels').insertOne(level)
-  if (result.acknowledged) {
-    res.json({
-      id: result.insertedId
-    })
-  } else {
-    throw new Error('Something went wrong inserting new level into the database')
+const checkNoDuplicateVersionIds = function (error) {
+  return async (req, res, next) => {
+    let versionIds = {}
+    for (version of req.body.versions) {
+      if (versionIds.hasOwnProperty(version.id)) {
+        let duplicateVersionId = new Error()
+        duplicateVersionId.status = 400
+        duplicateVersionId.errors = 'Versions of a level can\'t share the same versionId'
+        duplicateVersionId.message = 'Duplicate versionId ' + version.id
+        return next(duplicateVersionId)
+      }
+      versionIds[version.id] = 1
+    }
+    next()
   }
-})
+}
+
+const setArtists = function () {
+  return async (req, res, next) => {
+    req.body.artists = []
+    for (artistId of req.body.artistIds) {
+      if (artists.hasOwnProperty(artistId)) {
+        req.body.artists.push(artists[artistId])
+      } else {
+        let artistNotFound = new Error()
+        artistNotFound.status = 404
+        artistNotFound.errors = 'At least one unknown artistId given'
+        artistNotFound.message = 'No artist with artistId ' + artistId + ' found'
+        return next(artistNotFound)
+      }
+    }
+    delete req.body.artistIds
+    next()
+  }
+}
+
+const setAuthor = function () {
+  return async (req, res, next) => {
+    req.body.author = {
+      id: req.app.locals.userId,
+      username: req.app.locals.username
+    }
+    next()
+  }
+}
+
+const checkAuthorized = function (error, message) {
+  return async (req, res, next) => {
+    let query;
+    try {
+      query = { _id: new ObjectId(req.params.levelId) }
+    } catch (err) {
+      // An ObjectId can't be constructed from the given levelId
+      let levelNotFound = new Error()
+      levelNotFound.status = 404
+      levelNotFound.errors = 'Level not found'
+      levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+      return next(levelNotFound)
+    }
+    const oldLevel = await req.app.locals.db.collection('levels').findOne(query)
+    if (!oldLevel) {
+      let levelNotFound = new Error()
+      levelNotFound.status = 404
+      levelNotFound.errors = 'Level not found'
+      levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+      return next(levelNotFound)
+    }
+    if (oldLevel.author.id !== req.app.locals.userId) {
+      let userNotAuthorized = new Error()
+      userNotAuthorized.status = 403
+      userNotAuthorized.errors = error
+      userNotAuthorized.message = message
+      return next(userNotAuthorized)
+    }
+    next()
+  }
+}
+
+// TODO: only return unpublished levels to their autor
+
+router.post('/', checkAuthenticated('Levels can only be created by authorized users'),
+  checkNoDuplicateVersionIds(), setArtists(), setAuthor(),
+  async (req, res, next) => {
+    const result = await req.app.locals.db.collection('levels').insertOne(req.body)
+    if (result.acknowledged) {
+      res.json({
+        id: result.insertedId
+      })
+    } else {
+      return next(new Error('Something went wrong inserting new level into the database'))
+    }
+  })
 
 router.get('/', async (req, res, next) => {
   // create the index for text search on title if it doesn't exist already
   const result = await req.app.locals.db.collection('levels').createIndex({ title: "text" });
-  console.log(`Index created: ${result}`);
 
   const currentPage = req.query.hasOwnProperty('currentPage') ? req.query.currentPage : 1
   const pageSize = req.query.hasOwnProperty('pageSize') ? req.query.pageSize : 20
@@ -75,6 +142,8 @@ router.get('/', async (req, res, next) => {
   aggregationPipeline.push({
     $match: {
       ...(title !== '' && { $text: { $search: title } }),
+      ...(!req.app.locals.authenticated && { published: true }),
+      ...(req.app.locals.authenticated && { $or: [{ published: true }, { 'author.id': req.app.locals.userId }] }),
       'author.username': {
         $regex: author,
         $options: 'i'
@@ -160,10 +229,15 @@ router.get('/', async (req, res, next) => {
           $limit: pageSize
         },
         {
+          $addFields: {
+            id: '$_id'
+          }
+        },
+        {
           $project: {
-            'versions.objects': 0,
-            _id: 0,
-            ...(orderBy === 'difficulty' && { difficulty: 0 })
+            'versions.objects': false,
+            _id: false,
+            ...(orderBy === 'difficulty' && { difficulty: false })
           }
         }
       ]
@@ -190,6 +264,145 @@ router.get('/', async (req, res, next) => {
 
   const levels = await req.app.locals.db.collection('levels').aggregate(aggregationPipeline).toArray()
   res.json(levels[0])
+})
+
+router.get('/:levelId', async (req, res, next) => {
+  let query;
+  try {
+    query = { _id: new ObjectId(req.params.levelId) }
+  } catch (err) {
+    // An ObjectId can't be constructed from the given levelId
+    let levelNotFound = new Error()
+    levelNotFound.status = 404
+    levelNotFound.errors = 'Level not found'
+    levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+    return next(levelNotFound)
+  }
+  let level = await req.app.locals.db.collection('levels').findOne(query)
+  if (!level) {
+    let levelNotFound = new Error()
+    levelNotFound.status = 404
+    levelNotFound.errors = 'Level not found'
+    levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+    return next(levelNotFound)
+  }
+  if (!(level.published || req.app.locals.authenticated && req.app.locals.userId == level.author.id)) {
+    let userNotAuthorized = new Error()
+    userNotAuthorized.status = 403
+    userNotAuthorized.errors = 'Levels, that aren\'t published, can only be viewed by authorized users'
+    userNotAuthorized.message = 'The given user isn\'t authorized to view this level'
+    return next(userNotAuthorized)
+  }
+  level.id = level._id
+  delete level._id
+  res.json(level)
+})
+
+router.put('/:levelId', checkAuthenticated('Levels can only be updated by authenticated users'),
+  checkNoDuplicateVersionIds(), setArtists(), setAuthor(),
+  checkAuthorized('Levels can only be updated by authorized users', 'The given user isn\'t authorized to update this level'),
+  async (req, res, next) => {
+    let query;
+    try {
+      query = { _id: new ObjectId(req.params.levelId) }
+    } catch (err) {
+      // An ObjectId can't be constructed from the given levelId
+      let levelNotFound = new Error()
+      levelNotFound.status = 404
+      levelNotFound.errors = 'Level not found'
+      levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+      return next(levelNotFound)
+    }
+    const result = await req.app.locals.db.collection('levels').replaceOne(query, req.body)
+    if (!result.acknowledged || !result.matchedCount === 1) {
+      let unknownServerError = new Error()
+      unknownServerError.status = 500
+      unknownServerError.errors = 'Something went wrong'
+      unknownServerError.message = 'Something went wrong'
+      return next(unknownServerError)
+    }
+    res.sendStatus(200)
+  })
+
+router.delete('/:levelId', checkAuthenticated('Levels can only be deleted by authenticated users'),
+  checkAuthorized('Levels can only be deleted by authorized users', 'The given user isn\'t authorized to delete this level'),
+  async (req, res, next) => {
+    let query;
+    try {
+      query = { _id: new ObjectId(req.params.levelId) }
+    } catch (err) {
+      // An ObjectId can't be constructed from the given levelId
+      let levelNotFound = new Error()
+      levelNotFound.status = 404
+      levelNotFound.errors = 'Level not found'
+      levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+      return next(levelNotFound)
+    }
+    const result = await req.app.locals.db.collection('levels').deleteOne(query)
+    if (!result.acknowledged || !result.matchedCount === 1) {
+      let unknownServerError = new Error()
+      unknownServerError.status = 500
+      unknownServerError.errors = 'Something went wrong'
+      unknownServerError.message = 'Something went wrong'
+      return next(unknownServerError)
+    }
+    res.sendStatus(200)
+  })
+
+router.get('/:levelId/:versionId', async (req, res, next) => {
+  const aggregationPipeline = [];
+  try {
+    aggregationPipeline.push({
+      $match: {
+        _id: ObjectId(req.params.levelId),
+        'versions.id': {
+          $eq: Number(req.params.versionId)
+        }
+      }
+    })
+  } catch (err) {
+    // An ObjectId can't be constructed from the given levelId
+    let levelNotFound = new Error()
+    levelNotFound.status = 404
+    levelNotFound.errors = 'Level not found'
+    levelNotFound.message = 'No level with levelId ' + req.params.levelId + ' found'
+    return next(levelNotFound)
+  }
+  aggregationPipeline.push({
+    $project: {
+      version: {
+        $first: {
+          $filter: {
+            input: '$versions',
+            as: 'version',
+            cond: {
+              $eq: ['$$version.id', Number(req.params.versionId)]
+            }
+          }
+        }
+      },
+      published: true,
+      'author.id': true
+    }
+  })
+  const levels = await req.app.locals.db.collection('levels').aggregate(aggregationPipeline).toArray()
+  if (levels.length === 0) {
+    let levelNotFound = new Error()
+    levelNotFound.status = 404
+    levelNotFound.errors = 'Version of level not found'
+    levelNotFound.message = 'Either no level with levelId ' + req.params.levelId
+      + ' found or no version with versionId ' + req.params.versionId + ' of level found'
+    return next(levelNotFound)
+  }
+  const level = levels[0]
+  if (!(level.published || req.app.locals.authenticated && req.app.locals.userId == level.author.id)) {
+    let userNotAuthorized = new Error()
+    userNotAuthorized.status = 403
+    userNotAuthorized.errors = 'Levels, that aren\'t published, can only be viewed by authorized users'
+    userNotAuthorized.message = 'The given user isn\'t authorized to view this level'
+    return next(userNotAuthorized)
+  }
+  res.json(level.version)
 })
 
 module.exports = router
